.history/infra/k8s/ingress-srv_20201107175656.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
              - path: /posts/create
              backend:
                serviceName: posts-clusterip-srv
                servicePort: 4000
